# EmbedAI-server

./: .gitignore  1.txt  API_RESPONSE_REFACTOR_SUMMARY.md  CLAUDE.md  PROMPT_CONFIG_IMPLEMENTATION.md  README.md  admin_api_documentation.md  alembic.ini  app.db  client_api_documentation.md  main.py  migrate_knowledge_base_api.py  project_structure.txt  pyproject.toml  pytest.ini  test_embedding_logging.py  test_prompt_config_api.py
.cursor/rules/: architecture-analysis.mdc  development-workflow.mdc  file-size-limit.mdc  module-development.mdc
.kiro/steering/: language-preference.md
app/core/: config.py  context.py  decorators.py  exception_handlers.py  exceptions.py  exceptions_new.py  logger.py  middleware.py  redis_manager.py  response.py  response_utils.py  security.py  ws.py
app/middleware/: __init__.py  analytics_middleware.py  context_middleware.py  (+2 more)
doc/: admin_api_chat_http.md  admin_api_documentation.md  admin_api_http.md  admin_ws.md  client_api_chat_http.md  client_api_documentation.md
docs/: CODE_REVIEW_AND_DOCUMENTATION_REPORT.md  RAG_PROJECT_SUMMARY.md  README_RAG.md  analytics_dashboard.md  api-response-migration-guide.md  app_workflow.md  config_management.md  content_management.md  enhanced_security.md  health_monitoring.md  integration_management.md  migration_guide.md  rbac_system.md  testing_report.md
examples/: new_response_system_demo.py  prompt_config_usage.py
scripts/: init_config.py  init_content.py  init_health_monitoring.py  init_integration.py  init_rbac.py  init_security.py  performance_test.py  quick_validation.py  run_tests.py  test_validation.py  validate_rag_system.py
sdk/: .eslintrc.js  README.md  jest.config.js
tests/: conftest.py  readme.md  test_basic.py  test_chat_flow.py  test_client_flow.py  test_document_flow.py  test_knowledge_base_flow.py  test_new_exceptions.py  test_new_response_system.py  test_rag_integration.py
(+344 files in other folders)
