[tool.poetry]
name = "EmbedAI-server"
version = "0.1.0"
description = ""
authors = ["congwa <cong_wa@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = "^1.61.1"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
instructor = "^1.7.2"
asyncio = "^3.4.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
redis = "^5.2.1"
crontab = "^1.0.1"
huey = "^2.5.2"
email-validator = "^2.2.0"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
alembic = "^1.14.1"
aioredis = "^2.0.1"
unstructured = {version = "^0.18.11", extras = ["pptx", "csv"]}
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
aiohttp = "^3.12.15"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
bandit = "^1.8.6"
flake8 = "^7.3.0"
mypy = "^1.17.1"
locust = "^2.37.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -W ignore"
